plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'gg.modl.backend'
version = '2.2.4'
description = 'backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}


configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://nexus.modl.gg/repository/maven-releases/' }
}

subprojects {
	repositories {
		mavenCentral()
	}

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(21)
		}
	}
}

sourceSets {
	integrationTest {
		java.srcDir 'src/integrationTest/java'
		resources.srcDir 'src/integrationTest/resources'
	}
	e2eTest {
		java.srcDir 'src/e2eTest/java'
		resources.srcDir 'src/e2eTest/resources'
	}
}

configurations {
	integrationTestImplementation.extendsFrom testImplementation
	integrationTestCompileOnly.extendsFrom testCompileOnly
	integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
	e2eTestImplementation.extendsFrom testImplementation
	e2eTestCompileOnly.extendsFrom testCompileOnly
	e2eTestRuntimeOnly.extendsFrom testRuntimeOnly
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    // Rate limiting
    implementation 'com.bucket4j:bucket4j_jdk17-core:8.14.0'

    // External Services
    implementation 'io.github.cdimascio:dotenv-java:3.2.0'
    implementation 'com.stripe:stripe-java:31.0.0'
    implementation 'com.google.genai:google-genai:1.31.0'

    // AWS S3 (Backblaze B2)
    implementation platform('software.amazon.awssdk:bom:2.29.0')
    implementation 'software.amazon.awssdk:s3'

    // WebAuthn / Passkeys
    implementation 'com.yubico:webauthn-server-core:2.5.4'

    // Replay format
    implementation 'gg.modl.minecraft.replay:replay-format:1.1.0'

    // Shared protobuf types
    implementation 'gg.modl:proto:1.2.0'

    // Caching
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    // Utilities
    implementation 'com.github.slugify:slugify:3.0.7'

    // Compile-only
    compileOnly 'org.jetbrains:annotations:26.0.2'
    compileOnly 'org.projectlombok:lombok'
    compileOnly project(':mongo-fields-annotations')
    annotationProcessor project(':mongo-fields-processor')
    annotationProcessor 'org.projectlombok:lombok'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'com.google.code.gson:gson:2.11.0'
    testImplementation 'org.mongodb:mongodb-driver-sync'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // Integration test dependencies (Testcontainers, LocalStack, WireMock)
    // Spring Boot 4 split the test slices out of spring-boot-test-autoconfigure into
    // per-feature starters — @DataMongoTest lives in -data-mongodb-test, @WebMvcTest in -webmvc-test.
    integrationTestImplementation platform('org.testcontainers:testcontainers-bom:1.21.3')
    integrationTestImplementation 'org.springframework.boot:spring-boot-starter-data-mongodb-test'
    integrationTestImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    integrationTestImplementation 'org.springframework.boot:spring-boot-testcontainers'
    integrationTestImplementation 'org.testcontainers:junit-jupiter'
    integrationTestImplementation 'org.testcontainers:mongodb'
    integrationTestImplementation 'org.testcontainers:localstack'
    integrationTestImplementation 'org.wiremock:wiremock-standalone:3.10.0'
    integrationTestImplementation sourceSets.test.output
    integrationTestImplementation sourceSets.main.output
    integrationTestCompileOnly 'org.projectlombok:lombok'
    integrationTestAnnotationProcessor 'org.projectlombok:lombok'

    // End-to-end staging tests
    e2eTestImplementation sourceSets.test.output
    e2eTestImplementation sourceSets.main.output
    e2eTestCompileOnly 'org.projectlombok:lombok'
    e2eTestAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '-parameters'
}


tasks.named('test') {
	useJUnitPlatform()
	testLogging {
		events 'failed', 'skipped'
		exceptionFormat 'full'
		showStandardStreams = false
	}
}

tasks.register('integrationTest', Test) {
	description = 'Runs slice + Testcontainers integration tests.'
	group = 'verification'
	testClassesDirs = sourceSets.integrationTest.output.classesDirs
	classpath = sourceSets.integrationTest.runtimeClasspath
	shouldRunAfter('test')
	useJUnitPlatform()
	testLogging {
		events 'failed', 'skipped'
		exceptionFormat 'full'
		showStandardStreams = false
	}
}

tasks.register('e2eTest', Test) {
	description = 'Runs end-to-end tests against a deployed staging environment. Requires .env.test or MODL_* env vars.'
	group = 'verification'
	testClassesDirs = sourceSets.e2eTest.output.classesDirs
	classpath = sourceSets.e2eTest.runtimeClasspath
	useJUnitPlatform()
	testLogging {
		events 'failed', 'skipped', 'passed'
		exceptionFormat 'full'
		showStandardStreams = false
	}
}

tasks.named('check') {
	dependsOn 'integrationTest'
}
